# EmailSystem

./: .env.example  .gitignore  README.md  pyproject.toml
configs/eval/: qwen3_4b_vllm_sample.json  sample.json
dev/fd/: 63
docs/: architecture.md  eagle3_training.md  evaluation.md  lora_finetuning.md  multiclass_labeling.md
scripts/: build_maildir_dataset.py  build_phishing_dataset.py  build_spam_dataset.py  import_gmail.py  import_imap.py  kill_eagle3_distillation.sh  kill_eagle3_training.sh  kill_lora_training.sh  kill_multiclass_labeling.sh  merge_task_routed_eval.py  run_agent.py  run_api.py  run_api_concurrency_eval.py  run_eval.py  run_gmail_agent.py  run_imap_agent.py  run_independent_eval.py  run_multiclass_eval.py  run_output_length_pools.sh  run_parallel_eval.py  run_scheduler_matrix.py  run_speculative_tokens_matrix.py  run_task_routed_ngram_eval.sh  setup_angelslim_eagle3.sh  start_eagle3_distillation_detached.sh  start_eagle3_finetuned_classify_refill_detached.sh  start_eagle3_finetuned_distillation_detached.sh  start_eagle3_finetuned_training_detached.sh  start_eagle3_mixed_training_detached.sh  start_eagle3_training_detached.sh  start_lora_training_detached.sh  start_multiclass_labeling_detached.sh  train_eagle3_mixed_online.sh  train_eagle3_online.sh
training/: augment_multiclass_minority_data.py  generate_eagle3_distillation_data.py  label_multiclass_consensus.py  merge_lora.py  patch_angelslim_attention.py  prepare_eagle3_data.py  prepare_lora_classification_data.py  prepare_lora_multitask_data.py  quantize_awq.py  train_lora_classification.py
(+77 files in other folders)
