[project]
name = "email-system"
version = "0.1.0"
description = "Qwen3-4B based email processing agent skeleton"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
qwen = [
  "accelerate>=0.30",
  "safetensors>=0.4",
  "torch>=2.1",
  "transformers>=4.41"
]
vllm = [
  "safetensors>=0.4",
  "vllm>=0.5"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
