[project]
name = "email-system"
version = "0.1.0"
description = "Qwen3-4B based email processing agent skeleton"
requires-python = ">=3.10"
dependencies = [
  "tqdm>=4.66"
]

[project.optional-dependencies]
qwen = [
  "accelerate>=0.30",
  "safetensors>=0.4",
  "torch>=2.1",
  "transformers>=4.41"
]
finetune = [
  "accelerate>=0.30",
  "bitsandbytes>=0.43",
  "datasets>=2.19",
  "peft>=0.11",
  "safetensors>=0.4",
  "torch>=2.1",
  "transformers>=4.41",
  "trl>=0.9"
]
vllm = [
  "safetensors>=0.4",
  "vllm>=0.5"
]
api = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.32.1"
]
agent = [
  "langgraph>=1.0",
  "mcp>=1.0"
]
gmail = [
  "google-api-python-client>=2.0",
  "google-auth-httplib2>=0.2",
  "google-auth-oauthlib>=1.2"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
